[package]
name = "hexrails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Bevy stuff (need to update versions on every bevy release)
# deps: `sudo apt install g++ pkg-config libx11-dev libasound2-dev libudev-dev libwayland-dev libxkbcommon-dev libxkbcommon-x11-0`
bevy = { version = "0.19", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "dynamic_linking",
    "multi_threaded",
    "png",
    # This is needed on my linux machine otherwise winit doesn't build...
    "x11",
] }
# https://github.com/johanhelsing/bevy_pancam
bevy_pancam = "0.21.0"
# https://docs.rs/bevy_rapier2d/latest/bevy_rapier2d/
# Bevy 0.19 support is not released yet, tracking https://github.com/dimforge/bevy_rapier/pull/694
# via a cargo patch below (pinned to a commit, not the branch, since it's an unmerged WIP fork).
bevy_rapier2d = "0.34.0"
# https://github.com/Leafwing-Studios/leafwing-input-manager
leafwing-input-manager = "0.21.0"

# -- Other dependencies
petgraph = { version = "0.6.4", features = ["serde-1"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
bevy_rapier2d = { git = "https://github.com/Buncys/bevy_rapier.git", rev = "3ad36f3452343b35ec627e4cf60c1ae143a0ad4c" }
